--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-
+        
+        <img src="images/pawprint.png" class="logo-icon" alt="logo">
         <a class="navbar-brand" href="">tindog</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
