--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         
-        <img src="images/pawprint.png" class="logo-icon" alt="logo">
+        <div><img src="images/pawprint.png" class="logo-icon" alt="logo">
         <a class="navbar-brand" href="">tindog</a>
-
+        </div>
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
         </button>
