--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         
-        <div><img src="images/pawprint.png" class="logo-icon" alt="logo">
+        <div>
+        <img src="images/pawprint.png" class="logo-icon" alt="logo">
         <a class="navbar-brand" href="">tindog</a>
         </div>
         
