--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         
-        <div>
-        <img src="images/pawprint.png" class="logo-icon" alt="logo">
-        <a class="navbar-brand" href="">tindog</a>
-        </div>
+        <a class="navbar-brand" href=""><img src="images/pawprint.png" class="logo-icon" alt="logo">tindog</a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
             <span class="navbar-toggler-icon"></span>
